--- a/HC5962.config
+++ b/HC5962.config
@@ -4722,7 +4722,7 @@ CONFIG_PACKAGE_rpcd-mod-luci=y
 #
 # 1. Collections
 #
-# CONFIG_PACKAGE_luci is not set
+CONFIG_PACKAGE_luci=y
 # CONFIG_PACKAGE_luci-light is not set
 # CONFIG_PACKAGE_luci-nginx is not set
 # CONFIG_PACKAGE_luci-ssl is not set
